# ai-coach

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: cli-ci.yml  cli.yml  release.yml
ai-coach-api/: Cargo.toml
ai-coach-api/migrations/: 001_create_users_table.sql  002_create_athlete_profiles_table.sql  004_create_coaching_recommendations_table.sql  005_create_training_plans_table.sql  006_create_model_predictions_table.sql  010_create_password_reset_tokens_table.sql  011_create_token_blacklist_table.sql  017_create_vision_analysis_tables.sql  018_create_recovery_monitoring_tables.sql  019_create_recovery_analysis_tables.sql  020_create_recovery_alert_preferences.sql  021_create_training_recovery_settings.sql  022_create_training_adjustments.sql
ai-coach-api/src/: lib.rs  main.rs
ai-coach-api/src/api/: analytics.rs  coaching.rs  goals.rs  health.rs  ml_predictions.rs  mod.rs  oura_wearable.rs  performance_insights.rs  recovery.rs  recovery_analysis.rs  routes.rs  training_adjustment.rs  workout_recommendations.rs
ai-coach-api/src/auth/: errors.rs  middleware.rs  mod.rs  password.rs  service.rs
ai-coach-api/src/config/: app.rs  database.rs  mod.rs
ai-coach-api/src/middleware/: mod.rs  rate_limiting.rs
ai-coach-api/src/models/: keypoint.rs  mod.rs  notification.rs  plan_generation.rs  recovery_analysis.rs  recovery_data.rs  training_features.rs  training_plan.rs  training_recovery_settings.rs  vision_analysis.rs
ai-coach-api/src/services/: background_job_service.rs  coaching_recommendation_service.rs  email_notification_service.rs  feature_engineering_service.rs  goal_service.rs  keypoint_processor.rs  mod.rs  model_versioning_service.rs  notification_scheduler.rs  oura_api_client.rs  oura_integration_service.rs  plan_generation_service.rs  pose_estimation_service.rs  recovery_alert_service.rs  recovery_analysis_service.rs  recovery_data_service.rs  training_adjustment_service.rs  training_analysis_service.rs  training_plan_service.rs  training_session_service.rs  video_processing_service.rs
ai-coach-api/src/templates/email/: fitness_improvement.txt  weekly_summary.html  weekly_summary.txt  workout_reminder.html  workout_reminder.txt
ai-coach-api/tests/: integration_test.rs  load_testing.rs  ml_model_validation_test.rs  performance_insights_test.rs  pose_estimation_service_test.rs  pose_model_test.rs  security_testing.rs
ai-coach-api/tests/common/: mod.rs
ai-coach-api/tests/integration/: api_endpoints_test.rs  mod.rs
ai-coach-api/tests/unit/: event_service_test.rs
ai-coach-cli/: Cargo.toml  GUIDE.md  README.md
ai-coach-cli/migrations/: V1__initial_schema.sql
ai-coach-cli/src/: lib.rs  main.rs
ai-coach-cli/src/api/: error.rs  mod.rs  retry.rs
ai-coach-cli/src/commands/: config_cmd.rs  dashboard.rs  goals.rs  login.rs  logout.rs  mod.rs  stats.rs  sync.rs  whoami.rs  workout.rs  workout_parser.rs
ai-coach-cli/src/config/: mod.rs
ai-coach-cli/src/models/: goal.rs  mod.rs  workout.rs
ai-coach-cli/src/storage/: mod.rs
ai-coach-cli/src/ui/: app.rs  dashboard.rs  mod.rs  widgets.rs
ai-coach-cli/tests/: auth_test.rs  cli_test.rs  goals_tests.rs  workout_commands_test.rs
docs/: oura-integration.md  recovery-alert-system.md  recovery-analysis-mvp.md  recovery-monitoring-mvp.md  recovery-monitoring-roadmap.md  training-recovery-integration.md
docs/api/: training-api.md
docs/models/: pose-model-selection.md
docs/planning/: feature-2-realtime-dashboard.md  feature-3-computer-vision.md  feature-8-cli-tool.md  feature-9-injury-prediction.md
migrations/: 003_create_training_sessions_table.sql  007_create_indexes.sql  008_create_user_roles_table.sql  009_create_refresh_tokens_table.sql  012_create_auth_indexes.sql  013_create_training_metrics_tables.sql  014_create_goals_tables.sql  015_create_events_tables.sql  016_create_plan_generation_tables.sql
models/: README.md  pose_v1.metadata.json
src/: lib.rs  main.rs
src/api/: auth.rs  docs.rs  events.rs  goals.rs  ml_predictions.rs  mod.rs  notifications.rs  plan_generation.rs  routes.rs  training.rs  user_profile.rs  vision.rs  workout_recommendations.rs
src/auth/: jwt.rs  mod.rs  models.rs
src/config/: app.rs  mod.rs  seeding.rs
src/models/: athlete_profile.rs  coaching_recommendation.rs  event.rs  goal.rs  mod.rs  model_prediction.rs  notification.rs  performance_insights.rs  training_metrics.rs  training_session.rs  user.rs  validation.rs  workout_recommendation.rs
src/services/: athlete_profile_service.rs  background_job_service.rs  event_service.rs  feature_engineering_service.rs  ml_model_service.rs  mod.rs  model_prediction_service.rs  model_training_service.rs  notification_service.rs  performance_insights_service.rs  training_recommendation_service.rs  training_session_service.rs  user_service.rs  video_storage_service.rs  vision_analysis_service.rs  workout_recommendation_service.rs
src/templates/email/: fitness_improvement.html  goal_achievement.html  goal_achievement.txt  overtraining_risk.html  overtraining_risk.txt
tests/: database_integration_test.rs  lib.rs  workout_recommendation_test.rs
tests/integration/: auth_integration_test.rs  notification_integration_test.rs
tests/unit/: goal_service_test.rs  mod.rs  notification_service_test.rs  training_session_service_test.rs  user_service_test.rs
