[package]
name = "ai-coach"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# trainrs = { git = "https://github.com/stadelmanma/trainrs" }  # TODO: Add real trainrs dependency when available
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "auth", "set-header"] }
# candle-core = "0.7"  # TODO: Fix version conflicts and re-enable
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
lettre = "0.11"
regex = "1.0"
md5 = "0.7"
futures = "0.3"
# File handling and upload dependencies
tempfile = "3.0"
bytes = "1.0"
mime = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
# Background processing and caching
redis = { version = "0.24", features = ["tokio-comp"] }
tokio-cron-scheduler = "0.10"

# Machine Learning dependencies
linfa = "0.7"
linfa-linear = "0.7"
linfa-trees = "0.7"
linfa-preprocessing = "0.7"
ndarray = "0.16"
ndarray-stats = "0.6"
statrs = "0.17"

# Force older version of base64ct to avoid edition2024 requirement
base64ct = "=1.6.0"
