[package]
name = "ai-coach"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "auth", "set-header"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
lettre = "0.11"
regex = "1.0"
md5 = "0.7"
futures = "0.3"
# File handling and upload dependencies
tempfile = "3.0"
bytes = "1.0"
mime = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
# Background processing and caching
redis = { version = "0.24", features = ["tokio-comp"] }
tokio-cron-scheduler = "0.10"

# Machine Learning dependencies
linfa = "0.7"
linfa-linear = "0.7"
linfa-trees = "0.7"
linfa-preprocessing = "0.7"
ndarray = "0.16"
ndarray-stats = "0.6"
statrs = "0.17"

# Force older version of base64ct to avoid edition2024 requirement
base64ct = "=1.6.0"

[dev-dependencies]
# Testing framework dependencies
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

# Database testing
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }

# HTTP client for API testing
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "1.0", features = ["full"] }

# Load testing
# k6-runner = "0.1" # Not available on crates.io

# Assertion helpers
pretty_assertions = "1.4"
assert_matches = "1.5"

# Mock data generation
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"

# Test utilities
serial_test = "3.0"
once_cell = "1.19"
