[package]
name = "ai-coach-cli"
version.workspace = true
edition.workspace = true
authors = ["AI Coach Team"]
description = "Terminal-based training log application for AI Coach"
license = "MIT"
repository = "https://github.com/jpequegn/ai-coach"
keywords = ["cli", "training", "fitness", "ai"]
categories = ["command-line-utilities"]

[lib]
name = "ai_coach_cli"
path = "src/lib.rs"

[[bin]]
name = "ai-coach"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# CLI-specific dependencies
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
clap_complete = "4.5"

# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Local storage - Using sled embedded DB to avoid rusqlite/sqlx conflict
sled = "0.34"
bincode = "1.3"  # For serialization

# HTTP client for API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Interactive prompts
dialoguer = "0.11"
indicatif = "0.17"

# Configuration
toml = "0.8"
dirs = "5.0"

# Terminal colors and styling
console = "0.15"
colored = "2.1"

# Natural language parsing
regex = "1.11"

[dev-dependencies]
# Testing utilities
tempfile = "3.12"
mockito = "1.5"
assert_cmd = "2.0"
predicates = "3.1"
